# flappy-bird-neat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
flappy_bird/: CMakeLists.txt
flappy_bird/include/: bird.h  pipe.h
flappy_bird/src/: bird.cpp  pipe.cpp
neat/: CMakeLists.txt
neat/include/: connection.h  genome.h  link_set.h  neat.h  node.h  species.h
neat/src/: connection.cpp  genome.cpp  neat.cpp  node.cpp  species.cpp
